--- a/index.html
+++ b/index.html
@@ -511,16 +511,17 @@
     <header>
         <section id="banner" class="banner">
             <img src="images/BOjBoJR5xNbysF5M4MXdWLCnAzyYuv0MdGALJi58.jpg" alt="" class="banner_top kenburns-top" data-aos="fade" data-aos-duration="3000" style="object-position:center center">
+            <h2 class="banner-title" data-aos="fade-down" data-aos-duration="3000">
+                        <p class="playwrite-cz uk-text-center text-white" style="margin-top:100px;">Wedding day</p>
+                    </h2>
             <div class="container">
                 <div class="banner-container">
-                    <h2 class="banner-title" data-aos="fade-down" data-aos-duration="3000">
-                        <p class="playwrite-cz">Wedding day</p>
-                    </h2>
+                    
                     <p class="banner-slogan script-font" data-aos="fade-up" data-aos-duration="3000"></p>
                     <div class="banner-name dancing-script">
-                        Phương Anh<br>
+                        Thái Hà<br>
                         <span>&</span><br>
-                        Thái Hà
+                        Phương Anh
                     </div>
                     <div class="banner-date">
                         <span class="day_name roboto" data-aos="fade-right" data-aos-duration="3000">Tháng
@@ -640,31 +641,30 @@
                         <h3 class="card-title uk-margin-remove uk-text-bold dancing-script">Tiệc Nhà Trai
                         </h3>
                         <address class="uk-margin-remove">
-                            <p>
-                            </p><p class="roboto">Nhà Văn Hóa - Xóm Tân Lập (cũ)</p>
+                            <h3 class="dancing-script">Nhà Văn Hóa - Xóm Tân Lập (cũ)</h3>
                             <p></p>
                         </address>
                         <div class="invitation-body">
                             <div class="invi_time">
-                                <p class="fw-bold roboto">Vào lúc
-                                    <span class="invi_hours roboto">
+                                <h3 class="dancing-script">Vào lúc
+                                    <span class="invi_hours dancing-script">
                                         10:30 </span>
-                                </p>
+                                </h3>
                                 <div class="invi_group_time">
 
-                                    <span class="invi_date_text roboto">
-                                                                                Thứ Năm </span>
-                                    <span class="invi_date_number roboto">
-                                        <p class="invi_date roboto">
+                                    <h3 class="invi_date_text dancing-script">
+                                                                                Thứ Năm </h3>
+                                    <span class="invi_date_number dancing-script">
+                                        <p class="invi_date dancing-script">
                                             27</p> /
-                                        <p class="invi_month roboto">
+                                        <p class="invi_month dancing-script">
                                             11</p>
                                     </span>
-                                    <span class="invi_year_text roboto">
+                                    <span class="invi_year_text dancing-script">
                                         2025 </span>
                                 </div>
 
-                                <p class="invi_amlich roboto">Tức ngày 08 tháng 10 năm Ất Tỵ (Âm Lịch)</p>
+                                <h1 class="dancing-script" style="font-size:20px;">Tức ngày 08 tháng 10 năm Ất Tỵ (Âm Lịch)</h1>
                             </div>
 
                         </div>
@@ -684,29 +684,29 @@
                         <h3 class="card-title uk-margin-remove uk-text-bold dancing-script">Tiệc Nhà Gái
                         </h3>
                         <address class="uk-margin-remove">
-                            <p class="roboto">Trung tâm tiệc cưới Sen Hồng 1 -  Số 614 Lạc Long Quân - phường Tây Hồ - thành phố Hà Nội</p>
+                            <h3 class="dancing-script">Trung tâm tiệc cưới Sen Hồng 1 -  Số 614 Lạc Long Quân - phường Tây Hồ - thành phố Hà Nội</h3>
                         </address>
                         <div class="invitation-body">
                             <div class="invi_time">
-                                <p class="fw-bold roboto">Vào lúc
-                                    <span class="invi_hours roboto">
+                                <h3 class="dancing-script">Vào lúc
+                                    <span class="invi_hours dancing-script">
                                         11:00</span>
-                                </p>
+                                </h3>
                                 <div class="invi_group_time roboto">
 
-                                    <span class="invi_date_text roboto">
-                                                                                Thứ Bảy </span>
-                                    <span class="invi_date_number roboto">
-                                        <p class="invi_date roboto">
+                                    <h3 class="invi_date_text dancing-script">
+                                                                                Thứ Bảy </h3>
+                                    <span class="invi_date_number dancing-script">
+                                        <p class="invi_date dancing-script">
                                             6</p> /
-                                        <p class="invi_month roboto">
+                                        <p class="invi_month dancing-script">
                                             12</p>
                                     </span>
-                                    <span class="invi_year_text roboto">
+                                    <span class="invi_year_text dancing-script">
                                         2025 </span>
                                 </div>
 
-                                <p class="invi_amlich roboto" class="">Tức ngày 17 tháng 10 năm Ất Tỵ (Âm Lịch)</p>
+                                <h1 class=" dancing-script" style="font-size:20px;" class="">Tức ngày 17 tháng 10 năm Ất Tỵ (Âm Lịch)</h1>
                             </div>
 
                         </div>
@@ -1025,7 +1025,8 @@
                         <div class="gift-card">
                             <div class="gift-qr">
                                 <img src="images/ZG8FwBLpd9QC1UBG5JifskP2wQxWUlIDP4NwVsja.jpg" alt="" class="groom_qr" style="max-width:100%">
-                                <!-- <img src="images/CRqlhJEyMz7tLHgzsfs8OZPZuLO2uGYI0LRFg8KV.jpg" alt="" class="groom_qr" style="max-width:100%"> -->
+                                 <h3 class="uk-text-center">Phương Anh</h3>
+                                 <img src="images/CRqlhJEyMz7tLHgzsfs8OZPZuLO2uGYI0LRFg8KV.jpg" alt="" class="groom_qr" style="max-width:100%">
                             </div>
                             <div class="gift-body">
                             </div>
@@ -1070,9 +1071,12 @@
             <p>SOHA Wedding Studio</p>
         </div>
     </footer>
-   <!--  <button class="toggleAudio">
-        <i class="ri-volume-mute-fill"></i>
-    </button> -->
+    <button class="toggleAudio">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-play-circle" viewBox="0 0 16 16">
+  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+  <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445"/>
+</svg>
+    </button>
     <!-- END FOOTER -->
 
     <script src="js/fancybox.umd.js" id="fancybox js-js"></script>
